force-app/main/default/objects/Grant_Opportunity__c/Grant_Opportunity__c.object-meta.xml
<CustomObject>
    <description>Local cache of Grants.gov opportunities surfaced by GrantsGovService.searchGrants. Non-PII; sharing intentionally broad.</description>
    <label>Grant Opportunity</label>
    <nameField>
        <displayFormat>GRT-{00000000}</displayFormat>
        <label>Grant Opportunity Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Grant Opportunities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>