force-app/main/default/objects/Grant_Opportunity__c/fields/Agency_Code__c.field-meta.xml
<CustomField>
    <fullName>Agency_Code__c</fullName>
    <label>Agency Code</label>
    <length>40</length>
    <type>Text</type>
</CustomField>