force-app/main/default/objects/Grant_Opportunity__c/fields/Award_Ceiling__c.field-meta.xml
<CustomField>
    <fullName>Award_Ceiling__c</fullName>
    <label>Award Ceiling</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>