force-app/main/default/objects/Grant_Opportunity__c/fields/Award_Floor__c.field-meta.xml
<CustomField>
    <fullName>Award_Floor__c</fullName>
    <label>Award Floor</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>