force-app/main/default/objects/Grant_Opportunity__c/fields/Eligibility_Summary__c.field-meta.xml
<CustomField>
    <fullName>Eligibility_Summary__c</fullName>
    <label>Eligibility Summary</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>