force-app/main/default/objects/Grant_Opportunity__c/fields/Funding_Category__c.field-meta.xml
<CustomField>
    <fullName>Funding_Category__c</fullName>
    <label>Funding Category</label>
    <length>60</length>
    <type>Text</type>
</CustomField>