force-app/main/default/objects/Grant_Opportunity__c/fields/Match_Rationale__c.field-meta.xml
<CustomField>
    <fullName>Match_Rationale__c</fullName>
    <description>Deterministic explanation for why this grant matched the business profile. Rendered on the LWC "Why you match" expander.</description>
    <label>Match Rationale</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>