force-app/main/default/objects/Grant_Opportunity__c/fields/Matched_Account__c.field-meta.xml
<CustomField>
    <fullName>Matched_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Last business account that this opportunity was surfaced for. Not a hard link - the same opportunity may match many accounts.</description>
    <label>Matched Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Matched Grants</relationshipLabel>
    <relationshipName>Matched_Grants</relationshipName>
    <type>Lookup</type>
</CustomField>