force-app/main/default/objects/Grant_Opportunity__c/fields/Opportunity_ID__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_ID__c</fullName>
    <description>Grants.gov "id" - used as input for fetchOpportunity.</description>
    <label>Opportunity ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>