force-app/main/default/objects/Grant_Opportunity__c/fields/Opportunity_Number__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Number__c</fullName>
    <description>Grants.gov "number" field (upsert key).</description>
    <externalId>true</externalId>
    <label>Opportunity Number</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>