force-app/main/default/objects/Grant_Opportunity__c/fields/Raw_Payload__c.field-meta.xml
<CustomField>
    <fullName>Raw_Payload__c</fullName>
    <description>Verbatim JSON payload from Grants.gov for audit and replay. Not user-facing.</description>
    <label>Raw Payload</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>