force-app/main/default/objects/Grant_Opportunity__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>posted</fullName>
                <default>true</default>
                <label>Posted</label>
            </value>
            <value>
                <fullName>forecasted</fullName>
                <label>Forecasted</label>
            </value>
            <value>
                <fullName>closed</fullName>
                <label>Closed</label>
            </value>
            <value>
                <fullName>archived</fullName>
                <label>Archived</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>